--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^2.30.2",
+    "@prisma/client": "3.0.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dayjs": "^1.10.6",
     "jsonwebtoken": "^8.5.1",
