--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.22.0"
+    "react-query": "^3.22.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "@types/react": "17.0.19",
