连接数据库

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server (Preview) and MongoDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://luke:1234@39.108.231.99:3306/fulin_amazon?schema=public"
+DATABASE_URL="mysql://luke:Fulinluke*@39.108.231.99:3402/fulin_amazon?schema=public"
